--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
-.App {
+body{
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  text-align: center;
+  background-color:#242738 ;
+  /* background-color:#e1863d ; */
+
+  color: #ffffff;
+}
+.main{
+  border:1px solid #e6ae37;
+  padding: 10rem;
+  border-radius: 1rem 5rem 1rem 5rem;
+}
+h1{
+  margin: 0;
+  margin-bottom: 5rem;
+} 
+.input{
+  border:1px solid #333;
+  border-radius: 5rem;
+  width: 15rem;
+  height: 2rem;
+  margin-bottom: 1rem;
+  padding:.25rem;
   text-align: center;
 }
+select{
+  margin-left: .5rem;
+  height: 2rem;
+  width: 5rem;
+  border-radius: 5rem;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
+.equals{
+ font-size: 1rem;
+ font-weight: bold;
+ margin-bottom: 1rem;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
