--- a/src/App.css
+++ b/src/App.css
@@ -6,12 +6,13 @@ body{
   min-height: 100vh;
   text-align: center;
   background-color:#242738 ;
-  /* background-color:#e1863d ; */
+ 
 
   color: #ffffff;
 }
 .main{
-  border:1px solid #e6ae37;
+  border:2px solid #e6ae37;
+  background-color:#e1863d;
   padding: 10rem;
   border-radius: 1rem 5rem 1rem 5rem;
 }
@@ -20,24 +21,30 @@ h1{
   margin-bottom: 5rem;
 } 
 .input{
-  border:1px solid #333;
+  border:1px solid #242738;
   border-radius: 5rem;
   width: 15rem;
   height: 2rem;
   margin-bottom: 1rem;
   padding:.25rem;
+  font-size: 1rem;
   text-align: center;
+  color:#242738;
 }
 select{
   margin-left: .5rem;
   height: 2rem;
-  width: 5rem;
+  padding-left: 1rem;
+  color:#242738;
+  font-size: 1rem;
+  width: 6rem;
   border-radius: 5rem;
 
 }
 .equals{
- font-size: 1rem;
+ font-size: 2rem;
  font-weight: bold;
  margin-bottom: 1rem;
+ text-align: center;
 
 }
